fix page numbers being cut off

--- a/pages/pdfViewer/viewer.css
+++ b/pages/pdfViewer/viewer.css
@@ -49,7 +49,7 @@
     margin: -2px 0;
     border: none;
     font: inherit;
-    width: 2em;
+    width: 2.75em;
     text-align: center;
     border: 1px #ddd solid;
   }
